# Rust-music-visualisation

./: .gitignore  Cargo.toml  LICENSE  build.rs  prepare_release.rs  readme.md
src/: main.rs
src/audio/: playback.rs
src/structs/: app_state.rs  audio_analyzer.rs  audio_playback_state.rs  buttons.rs  colour_slider.rs  element.rs  mod.rs  sample_wrapper.rs  visualisation_state.rs
src/ui/: mod.rs  ui.rs  visualisation.rs
